; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_draw.c_PicoLine.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_draw.c_PicoLine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@skip_next_line = common dso_local global i32 0, align 4
@DrawScanline = common dso_local global i32 0, align 4
@Pico = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@HighColIncrement = common dso_local global i64 0, align 8
@HighCol = common dso_local global i32 0, align 4
@DrawLineDest = common dso_local global i8* null, align 8
@DrawLineDestIncrement = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @PicoLine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PicoLine(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* @skip_next_line, align 4
  %11 = icmp sgt i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %4
  %13 = load i32, i32* @skip_next_line, align 4
  %14 = add nsw i32 %13, -1
  store i32 %14, i32* @skip_next_line, align 4
  br label %55

15:                                               ; preds = %4
  %16 = load i32, i32* %5, align 4
  store i32 %16, i32* @DrawScanline, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = add nsw i32 %17, %18
  %20 = call i32 @PicoScanBegin(i32 %19)
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %15
  %24 = load i32, i32* %9, align 4
  %25 = sub nsw i32 %24, 1
  store i32 %25, i32* @skip_next_line, align 4
  br label %55

26:                                               ; preds = %15
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @BackFill(i32 %27, i32 %28)
  %30 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @Pico, i32 0, i32 0, i32 0), align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 1
  %32 = load i32, i32* %31, align 4
  %33 = and i32 %32, 64
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %26
  %36 = load i32, i32* %7, align 4
  %37 = call i32 @DrawDisplay(i32 %36)
  br label %38

38:                                               ; preds = %35, %26
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* %5, align 4
  %41 = call i32 @FinalizeLine(i32 %39, i32 %40)
  %42 = load i32, i32* %5, align 4
  %43 = load i32, i32* %6, align 4
  %44 = add nsw i32 %42, %43
  %45 = call i32 @PicoScanEnd(i32 %44)
  store i32 %45, i32* @skip_next_line, align 4
  %46 = load i64, i64* @HighColIncrement, align 8
  %47 = load i32, i32* @HighCol, align 4
  %48 = sext i32 %47 to i64
  %49 = add nsw i64 %48, %46
  %50 = trunc i64 %49 to i32
  store i32 %50, i32* @HighCol, align 4
  %51 = load i8*, i8** @DrawLineDest, align 8
  %52 = load i32, i32* @DrawLineDestIncrement, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i8, i8* %51, i64 %53
  store i8* %54, i8** @DrawLineDest, align 8
  br label %55

55:                                               ; preds = %38, %23, %12
  ret void
}

declare dso_local i32 @PicoScanBegin(i32) #1

declare dso_local i32 @BackFill(i32, i32) #1

declare dso_local i32 @DrawDisplay(i32) #1

declare dso_local i32 @FinalizeLine(i32, i32) #1

declare dso_local i32 @PicoScanEnd(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
